--- a/frontend-app/utils/style.css
+++ b/frontend-app/utils/style.css
@@ -186,6 +186,45 @@ nav {
     to { max-height: 50px;}
 }
 
+/* PAGINATION */
+#pagination {
+    display: flex;
+    max-width: 50vw;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: var(--space-base);
+    margin-top: var(--space-base);
+    justify-content: space-between;
+}
+#pagination a {
+    color: black;
+    float: left;
+    padding: 12px 20px;
+    text-decoration: none;
+    border: 1px solid #ddd;
+    margin: 0 4px;
+    background-color: var(--hex-ika-purple);
+    border-radius: 5px;
+    color: #FFFF;
+    opacity: .5;
+    font-weight: 700;
+    border: none;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+    transition: opacity .5s ease-out;
+}
+#pagination a.active {
+    background-color: var(--hex-ina-orange);
+    color: var(--hex-ink-black);
+    opacity: .8;
+}
+#pagination a.disabled {
+    pointer-events: none;
+    cursor: default;   
+}
+#pagination a:hover {
+    opacity: 1;
+}
+
 /* Details */
 /* .details {
     margin-top: 25px; 
