setup post request

--- a/frontend-app/components/nav.html
+++ b/frontend-app/components/nav.html
@@ -18,7 +18,7 @@
         style="padding: 0; margin-right: var(--space-xs)"
         aria-hidden="true"
       ></i
-      >Figures
+      >My Figures
     </a>
   </div>
 </nav>
