display items in My Figures Page

--- a/frontend-app/components/nav.html
+++ b/frontend-app/components/nav.html
@@ -12,7 +12,7 @@
       ></i
       >Home
     </a>
-    <a href="/figure.html" id="nav_figure">
+    <a href="/components/figure/figure.html" id="nav_figure">
       <i
         class="fa fa-female fa-lg"
         style="padding: 0; margin-right: var(--space-xs)"
