still in progress. New method of db data structure

--- a/frontend-app/components/nav.html
+++ b/frontend-app/components/nav.html
@@ -20,5 +20,13 @@
       ></i
       >My Figures
     </a>
+    <a href="/components/browse/browse.html" id="nav_browse">
+      <i
+      class="fa fa-search fa-lg"
+        style="padding: 0; margin-right: var(--space-xs)"
+        aria-hidden="true"
+      ></i
+      >Browse
+    </a>
   </div>
 </nav>
