--- a/frontend-app/components/browse/browse.html
+++ b/frontend-app/components/browse/browse.html
@@ -6,14 +6,18 @@
       src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"
       type="text/javascript"
     ></script>
-    <script type="module" src="main.js"></script>
+    <script type="module" src="/components/browse/browse.js"></script>
     <!-- https://fontawesome.com/v4/get-started/ -->
-    <link rel="stylesheet" href="assets/fa/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="utils/style.css" />
-    <link rel="icon" href="assets/takodachi-ina.gif" />
+    <link rel="stylesheet" href="/assets/fa/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="/utils/style.css" />
+    <link rel="icon" href="/assets/takodachi-ina.gif" />
   </head>
   <body>
     <div id="navigation"></div>
+    <div class="container">
+      <div id="displayContent" class="columns-4"></div>
+    </div>
+    <div id="pagination"></div>
   </body>
   <!-- Reference UI Design https://myfigurelist.com/price-drop/search -->
   <!-- <input type="text" placeholder="Search Text" id="search"> -->
